bugfix: Scrollbars no longer appear when the site is really short
PEEK-297

--- a/peek_desktop/src/app/main-home/main-home.component.dweb.scss
+++ b/peek_desktop/src/app/main-home/main-home.component.dweb.scss
@@ -11,4 +11,5 @@
 .peek-dc-home-logo {
     display: block;
     margin: auto;
+    height: 100%;
 }
